# tears_2025

./: .gitignore  README.md  alembic.ini  dev.db  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: frontend_prd.txt  prd.txt
alembic/: env.py  script.py.mako
app/: __init__.py  db.py  main.py
app/core/: config.py
docs/: admin_broadcast.md
scripts/: README_import_from_gcs.md  add_indexes_history.sql  apply_indexes.py  apply_rls_dev.py  check_policies.py  create_indexes_concurrent.sql  create_schema_via_models.py  enable_rls_dev.sql  fix_rls_perf_and_indexes.py  import_from_gcs.py  run_explain_history.py  verify_team_fks.py
tests/: debug_entries2.py  debug_entries_run.py  test_admin_api.py  test_admin_broadcast.py  test_admin_finalize_endpoint.py  test_admin_weeks.py  test_auth.py  test_dashboard_endpoint.py  test_dashboard_picks.py  test_dashboard_service.py  test_entries.py  test_espn_client.py  test_finalize_service.py  test_health.py  test_history_matrix_endpoint.py  test_history_matrix_integration.py  test_import_dryrun.py  test_internal_sync.py  test_migration_seed_teams.py  test_password_reset.py  test_picks.py  test_picks_endpoint_more.py  test_picks_endpoints.py  test_picks_patch_endpoints.py  test_public_endpoints.py  test_reveal_snapshot.py  test_seed_teams.py  test_sync.py  test_sync_db.py  test_sync_db_edgecases.py
web/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+164 files in other folders)
