[tool.poetry]
name = "tears_2025"
version = "0.1.0"
description = "Tears 2025 backend - FastAPI service"
authors = ["coffe <coffe@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.dev-dependencies]
pytest = "^8.4"
httpx = "^0.24"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
